--- a/style/flex.css
+++ b/style/flex.css
@@ -14,6 +14,10 @@
     align-items: center;
 }
 
+.d-inline {
+    display: inline;
+}
+
 .d-none {
     display: none;
 }
