--- a/style/spacing.css
+++ b/style/spacing.css
@@ -1,3 +1,7 @@
+.ms-auto {
+    margin-left: auto;
+}
+
 .me-24 {
     margin-right: 24px;
 }
@@ -75,14 +79,15 @@
 }
 
 .py-64 {
-    padding: 64px 0px;
+    padding-top: 64px;
+    padding-bottom: 64px;
 }
 
 .py-152 {
     padding: 152px 0px;
 }
 
-@media (max-width: 576px) {
+/* @media (max-width: 576px) {
     .me-sm-0 {
         margin-right: 0px;
     }
@@ -98,7 +103,7 @@
     .mb-sm-8 {
         margin-bottom: 8px;
     }
-}
+} */
 
 @media (max-width: 767px) {
     .mb-md-12 {
@@ -122,7 +127,8 @@
     }
     
     .py-md-32 {
-        padding: 32px 0px;
+        padding-top: 32px;
+        padding-bottom: 32px;
     }
 
     .py-md-87 {
