--- a/style/story.css
+++ b/style/story.css
@@ -60,7 +60,7 @@
   letter-spacing: 0.05em;
   padding: 12px 24px;
   border-radius: 4px;
-  color: var(--neutral-0);
+  color: var(--neutral-white);
   background-color: var(--neutral-900);
 }
 
